# nekoyume

./: .buildinfo  .dockerignore  .editorconfig  .env.dist  .gitignore  CNAME  Dockerfile  LICENSE.txt  Procfile  README.html  README.md  README.rst  README_link.html  api.py  app.json  app.py  codecov.yml  config.yaml  deployment.yaml  docker-compose.yml  example.py  exc.py  genindex.html  hashcash.py  index.html  models.py  monsters.csv  neko.py  objects.inv  planetarium_ko.html  py-modindex.html  reference.html  references.html  requirements.txt  roadmap.html  roadmap_ko.html  scan.py  search.html  searchindex.js  setup.cfg  (+5 more)
.circleci/: config.yml
_sources/: README.md.txt  planetarium_ko.md.txt  references.md.txt  white_paper.md.txt  white_paper_ko.rst.txt
_sources/docs/: white_paper_ko.md.txt
_static/: documentation_options.js
data/: monsters.csv
docs/: Makefile  conf.py  index.rst  make.bat  references.rst  roadmap.md  roadmap_ko.md  white_paper.md  white_paper_ja.md  white_paper_ko.html  white_paper_ko.md
doctrees/: environment.pickle  index.doctree  planetarium_ko.doctree  references.doctree  roadmap.doctree  roadmap_ko.doctree  white_paper.doctree  white_paper_ko.doctree
hooks/: pre-commit  pre-push
html/: .buildinfo  index.html  references.html  roadmap.html  roadmap_ko.html  search.html  searchindex.js  white_paper.html  white_paper_ko.html
html/_sources/: white_paper.md.txt  white_paper_ko.md.txt
html/_static/: documentation_options.js
nekoyume/: api.py  app.py  block.py  broadcast.py  cli.py  exc.py  game.py  hashcash.py  items.py  models.py  move.py  neko.py  node.py  shell.py  tasks.py  user.py  util.py
nekoyume/battle/: __init__.py  __main__.py  behaviors.py  character.py  characters.py  components.py  enums.py  logger.py  monsters.py  players.py  rand.py  simul.py  skills.py  tables.py  utils.py
nekoyume/data/: monsters.csv
nekoyume/items/: __init__.py  armors.py  base.py  foods.py  heads.py  weapons.py
nekoyume/static/: common.css  game.css  items.css
nekoyume/tables/: __init__.py  exp.tsv  item_drop.tsv  item_equips.tsv  items.tsv  monster_appear.tsv  monster_skills.tsv  monsters.tsv  npc.tsv  skills.tsv  stats.tsv  zone.tsv
nekoyume/templates/: basic_info.html  dashboard.html  first_class.html  game.html  layout.html  login.html  new.html  (+1 more)
templates/: dashboard.html  layout.html
tests/: api_test.py  block_test.py  broadcast_test.py  conftest.py  game_test.py  hashcash_test.py  models_test.py  move_test.py  node_test.py  tasks_test.py  util_test.py
(+34 files in other folders)
