[metadata]
name = nekoyume
version = 0.1.4
description = Decentralized MMORPG based on Dungeon World
long_description = file: README.rst
url = https://github.com/nekoyume/nekoyume
project_urls =
    Bug Reports = https://github.com/nekoyume/nekoyume/issues
    Funding = https://nekoyu.me/
    Source = https://github.com/nekoyume/nekoyume/
license = LICENSE.txt
author = JC Kim
author_email = jc@nekoyu.me
keywords = blockchain mmorpg game
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Other Audience
    Topic :: Database :: Database Engines/Servers
    Topic :: Games/Entertainment :: Role-Playing
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
    bencode.py >= 2.0.0, < 2.1.0
    blinker >= 1.4, < 1.5
    celery >= 4.1.0, < 4.2.0
    click >= 6.7, < 7.0
    cykeccak >= 0.13.2.2, < 0.14.0.0
    dataclasses >= 0.6, < 1.0
    Flask >= 1.0.2, < 1.1.0
    Flask-Babel >= 0.11.2, < 0.12.0
    Flask-Caching >= 1.4.0, < 1.5.0
    Flask-SQLAlchemy >= 2.3.2, < 2.4.0
    gevent == 1.3.5
    gunicorn >= 19.9.0
    iso8601 >= 0.1.12, < 0.2
    psycopg2 >= 2.7.5, < 2.8.0
    ptpython == 0.41
    pytz >= 2018.3
    sentry-sdk[flask] == 0.4.1
    redis >= 2.10.6, < 2.11.0
    requests >= 2.19.1, < 2.20.0  # version confict in sentry, requests
    coincurve >= 9.0.0
    SQLAlchemy >= 1.2.2, < 1.3.0
    tablib >= 0.12.1, < 0.13.0
    typeguard >= 2.2.2, < 2.3.0
    urllib3 == 1.23  # version confict in sentry, requests

[options.package_data]
nekoyume = tables/*.tsv, templates/*.html, translations/*/LC_MESSAGES/*

[options.extras_require]
dev =
    flake8 >= 3.5.0, < 3.6.0
    flake8-import-order-spoqa >= 1.5.0, < 1.6.0
    recommonmark==0.4.0
    Sphinx >= 1.7.1, < 1.8.0
    sphinx-rtd-theme==0.2.4
test =
    codecov >= 2.0.15, < 2.1.0
    pytest >= 3.8.0, < 3.9.0
    pytest-flake8 >= 1.0.2, < 1.1.0
    pytest-localserver >= 0.4.1, < 0.5
    requests-mock >= 1.5.2, < 1.6.0

[options.packages.find]
exclude =
    contrib
    docs
    tests

[options.entry_points]
console_scripts =
    nekoyume = nekoyume.cli:cli

[tool:pytest]
addopts = -x --ff --flake8 --doctest-modules
testpaths =
          tests
          nekoyume
filterwarnings =
    ignore::DeprecationWarning

[flake8]
import-order-style = spoqa
application-import-names = nekoyume
exclude =
    .git,
    .venv,
    __pycache__,
    build,
    dist
